# financial-reconciliation-agent

./: .gitignore  DECISIONS.md  ERRORS.md  README.md  main.py  prod.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: eval_ci.yml
docker/: Dockerfile  docker-compose.yml
notebooks/: layer1_rag_pipeline-test-2.ipynb  layer1_rag_pipeline-test.ipynb  layer1_rag_pipeline.ipynb  layer2_observability-test.ipynb  layer2_observability.ipynb  layer3_eval_ci.ipynb
src/api/: dependencies.py  main.py  schemas.py
src/ingestion/: chunker.py  parser.py  section_detector.py
src/retrieval/: embeddings.py  router.py  search.py
src/tests/: test_chunker.py  test_router.py  test_section_detector.py
