[project]
name = "financial-reconciliation-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cohere>=7.0.5",
    "docling>=2.110.0",
    "fastapi>=0.139.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "langchain-pinecone>=0.2.13",
    "langfuse>=4.13.1",
    "numpy>=2.5.1",
    "openai>=2.44.0",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.10",
    "pinecone-client>=6.0.0",
    "pinecone-text>=0.11.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "requests>=2.34.2",
    "tiktoken>=0.13.0",
    "tqdm>=4.68.3",
    "uvicorn>=0.51.0",
]
